--- a/src/styles/DarkMode.css
+++ b/src/styles/DarkMode.css
@@ -23,7 +23,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--color-header);
+  background-color: var(--color-btn);
   transition: .5s;
   border-radius: 30px;
 }
@@ -36,16 +36,16 @@
   border-radius: 50%;
   left: 10%;
   bottom: 15%;
-  box-shadow: inset 8px -4px 0px 0px #fff000;
-  background: var(--color-header);
+  box-shadow: inset 15px -4px 0px 15px #fff000;
+  /* background: var(--color-header); */
   transition: .5s;
 }
 
 input:checked + .slider {
-  background-color: var(--color-btn);
+  background-color: var(--color-header);
 }
 
 input:checked + .slider:before {
   transform: translateX(100%);
-  box-shadow: inset 15px -4px 0px 15px #fff000;
+  box-shadow: inset 8px -4px 0px 0px #fff000;
 }
