--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -90,6 +90,32 @@ body{
 
     }
 }
+@layer Nav{
+    nav{
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+    }
+
+    nav > a:nth-last-of-type(2), nav > a:nth-last-of-type(1) {
+        color: var(--color-headings);
+        text-decoration: none;
+        border-bottom: 2px solid transparent;
+        transition: border-color 0.2s;
+    }
+
+     nav > a:nth-last-of-type(2){
+        border-bottom-color: var(--color-headings);
+    }
+
+    nav:hover nav > a:nth-last-of-type(2){
+         border-bottom-color: transparent;
+    }
+
+    nav > a:nth-last-of-type(2):hover{
+        border-bottom-color: var(--color-headings);
+    }
+}
 
 .podcast-grid {
     margin-bottom: 30px;
