--- a/src/styles/FavouriteEpisode.css
+++ b/src/styles/FavouriteEpisode.css
@@ -1,4 +1,8 @@
 
+    .favourites > h2, .favourites > p{
+        color: var(--color-headings)
+    }
+
     .fav-list-container {
         border: 1px solid var(--color-border);
         padding: 15px 18px;
