--- a/src/styles/PodcastModal.css
+++ b/src/styles/PodcastModal.css
@@ -260,12 +260,13 @@
 @layer Episodes{
     .episode-container{
         width: 100%;
-        background-color: rgba(0, 0, 0, 0.03);
+        background-color: var(--episode-inner-shadow);
         display: flex;
         gap: 15px;
        padding: 14px 18px;
        border-radius: 8px;
-       box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.15);
+       box-shadow: 0 0 1px 1px var(--episode-shadow);
+       cursor: pointer;
     }
 
     .episode-container > img{
