--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     background-color: var(--color-bg);
     /* margin-top: 75px; */
-    padding: 75px 25px 0 25px;
+    padding: 75px 25px 100px 25px;
 }
 
 * {
@@ -22,6 +22,8 @@ body{
     --color-backdrop: #00000054;
     --color-fade-text : rgba(0,0,0,0.4);
     --color-headings : black;
+    --episode-shadow : rgba(0, 0, 0, 0.15);
+    --episode-inner-shadow: rgba(0, 0, 0, 0.03)
 }
 
 @layer DarkMode{
@@ -34,7 +36,9 @@ body{
     --color-content-text: rgba(255, 255, 255, 0.88);  /* smooth readable white */
     --color-btn: #4FA3D1;             /* lighter blue for contrast on dark */
     --color-fade-text: rgba(255, 255, 255, 0.719);
-    --color-headings: var(--color-text)
+    --color-headings: var(--color-text);
+    --episode-shadow : rgba(255, 255, 255, 0.15);
+    --episode-inner-shadow: rgba(255, 255, 255, 0.03);
     }
 }
 
