--- a/src/styles/PodcastCard.css
+++ b/src/styles/PodcastCard.css
@@ -18,6 +18,7 @@
 .podcast-img-div{
     width: 100%;
     /* height: 100%; */
+    position: relative;
 }
 
 .podcast-img{
@@ -80,3 +81,17 @@
     margin-top: 10px;
     color: var(--color-content-text);
 } 
+
+.heart{
+    color: red;
+    font-size: 1.5rem;
+    margin-bottom: 6px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 99;
+}
+
+.heart:hover{
+    transform: scale(1.1);
+}
