--- a/src/styles/PodcastModal.css
+++ b/src/styles/PodcastModal.css
@@ -327,6 +327,11 @@
         width: 22px;
         height: 22px;
         cursor: pointer;
+        transition: transform .5s ease;
+    }
+
+    .heart-icon:hover{
+        transform: scale(1.1);
     }
 
 }
