--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -106,18 +106,7 @@ body{
         text-decoration: none;
         border-bottom: 2px solid transparent;
         transition: border-color 0.2s;
-    }
-
-     nav > a:nth-last-of-type(2){
-        border-bottom-color: var(--color-headings);
-    }
-
-    nav:hover nav > a:nth-last-of-type(2){
-         border-bottom-color: transparent;
-    }
-
-    nav > a:nth-last-of-type(2):hover{
-        border-bottom-color: var(--color-headings);
+        font-size: 1.1rem;
     }
 }
 
