--- a/src/styles/FavouriteEpisode.css
+++ b/src/styles/FavouriteEpisode.css
@@ -34,6 +34,10 @@
     gap: 15px;
 }
 
+.fav-podcast-group > h2{
+    color : var(--color-headings)
+}
+
 
 .fav-ep-clm {
     flex: 1 1 calc(33% - 15px); /* 3 items per row */
